Upgrade deps to reduce Yarn warnings amount

--- a/packages/client-angular/package.json
+++ b/packages/client-angular/package.json
@@ -38,10 +38,13 @@
   "author": "SysGears INC",
   "license": "MIT",
   "dependencies": {
+    "@angular/animations": "^7.1.4",
+    "@angular/cdk": "^7.2.0",
     "@angular/common": "^7.0.3",
     "@angular/compiler": "^7.0.3",
     "@angular/core": "^7.0.3",
     "@angular/forms": "^7.1.4",
+    "@angular/material": "^7.2.0",
     "@angular/platform-browser": "^7.0.3",
     "@angular/platform-browser-dynamic": "^7.0.3",
     "@angular/router": "^7.0.3",
@@ -52,7 +55,6 @@
     "@gqlapp/look-client-angular": "^0.1.0",
     "@gqlapp/module-client-angular": "^0.1.0",
     "@ngrx/store": "^7.2.0",
-    "angular2-template-loader": "^0.6.2",
     "apollo-angular": "^1.5.0",
     "apollo-angular-link-http": "^1.4.0",
     "apollo-cache": "^1.1.25",
@@ -60,11 +62,11 @@
     "apollo-cache-router": "^1.1.6",
     "apollo-client": "^2.4.7",
     "apollo-link": "^1.0.6",
-    "apollo-link-batch-http": "1.2.2",
+    "apollo-link-batch-http": "^1.2.11",
     "apollo-link-context": "^1.0.7",
     "apollo-link-state": "^0.4.1",
     "apollo-link-ws": "^1.0.3",
-    "apollo-logger": "^0.3.0",
+    "apollo-logger": "^0.3.2",
     "apollo-upload-client": "^8.0.0",
     "graphql": "^14.1.1",
     "minilog": "^3.1.0",
@@ -78,19 +80,20 @@
     "@types/lodash": "^4.14.118",
     "@types/mocha": "^5.2.5",
     "@types/webpack-env": "^1.13.6",
+    "angular2-template-loader": "^0.6.2",
     "autoprefixer": "^8.3.0",
     "chai": "^4.1.2",
     "chai-http": "^4.0.0",
     "cross-env": "^5.1.1",
-    "eslint": "^5.16.0",
-    "graphql-tools": "^2.13.0",
+    "graphql-tools": "^4.0.4",
     "mocha": "^5.1.1",
     "mocha-steps": "^1.1.0",
     "mochapack": "^1.0.0",
     "rimraf": "^2.6.2"
   },
   "peerDependencies": {
-    "@larix/zen": "^0.1.0"
+    "@larix/zen": "^0.1.0",
+    "eslint": "*"
   },
   "browserslist": {
     "development": [
