--- a/modules/core/client-angular/package.json
+++ b/modules/core/client-angular/package.json
@@ -3,6 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@gqlapp/core-common": "^0.1.0"
+    "@gqlapp/core-common": "^0.1.0",
+    "@angular/common": "^7.0.3",
+    "@angular/compiler": "^7.0.3",
+    "@angular/core": "^7.0.3",
+    "@angular/forms": "^7.1.4",
+    "@angular/platform-browser": "^7.0.3",
+    "@angular/platform-browser-dynamic": "^7.0.3",
+    "@angular/router": "^7.0.3",
+    "@angularclass/hmr": "^2.1.3",
+    "@ngrx/store": "^7.2.0",
+    "rxjs": "^6.3.3",
+    "zone.js": "^0.8.26"
   }
 }
