--- a/modules/rest/server-ts/package.json
+++ b/modules/rest/server-ts/package.json
@@ -6,7 +6,7 @@
     "@types/swagger-ui-express": "^3.0.0"
   },
   "peerDependenciesMeta": {
-    "sofa-api": "*",
+    "@hofstadter-io/sofa-api": "*",
     "swagger-ui-express": "*"
   }
 }
