--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -57,6 +57,7 @@
     "@babel/polyfill": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "@babel/register": "^7.0.0",
+    "@hofstadter-io/sofa-api": "^0.3.1",
     "@gqlapp/core-common": "^0.1.0",
     "@gqlapp/database-server-ts": "^0.1.0",
     "@gqlapp/testing-server-ts": "^0.1.0",
@@ -123,7 +124,6 @@
     "redux": "^4.0.1",
     "roboto-npm-webfont": "^1.0.1",
     "serialize-javascript": "^1.4.0",
-    "sofa-api": "^0.3.0",
     "shortid": "^2.2.8",
     "source-map-support": "^0.5.0",
     "sourcemapped-stacktrace": "^1.1.8",
