--- a/package.json
+++ b/package.json
@@ -172,6 +172,8 @@
     "whatwg-fetch": "^2.0.4"
   },
   "dependencies": {
+    "inquirer": "^6.2.2",
+    "lodash": "^4.17.11",
     "opencollective": "^1.0.3"
   },
   "resolutions": {
