--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -4,8 +4,7 @@
   "version": "1.0.0",
   "main": "src",
   "engines": {
-    "node": ">= 6.11.1 <= 10",
-    "yarn": ">= 1.0.0"
+    "node": ">= 8 <= 10"
   },
   "scripts": {
     "build": "cross-env NODE_ENV=production zen build",
