--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,8 +1,9 @@
 {
+  "extends": "./tsconfig.json",
   "compilerOptions": {
     "target": "es2017",
     "module": "es2017",
-    "lib": ["es2015", "dom", "es2017"]
+    "lib": ["es2015", "dom", "esnext"]
   },
   "include": [
     "**/typings.d.ts",
