Fix running jest tests for mobile platforms

--- a/package.json
+++ b/package.json
@@ -132,6 +132,7 @@
     "husky": "^1.1.2",
     "ignore-loader": "^0.1.2",
     "isomorphic-style-loader": "^4.0.0",
+    "jest": "^24.8.0",
     "lerna": "^3.4.0",
     "less": "^3.0.2",
     "less-loader": "^4.1.0",
@@ -149,6 +150,7 @@
     "style-loader": "^0.23.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
+    "ts-jest": "^24.0.2",
     "ts-loader": "^4.5.0",
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.5.0",
