--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "1.0.0",
   "engines": {
+    "node": "8.* || >= 10.*",
     "yarn": ">= 1.0.0"
   },
   "cacheDirectories": [
