--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
     "autoprefixer": "^9.5.0",
     "babel-core": "^7.0.0-0",
     "babel-eslint": "^10.0.1",
+    "babel-jest": "^24.8.0",
     "babel-plugin-import": "^1.7.0",
     "babel-preset-minify": "^0.5.0-alpha.5a128fd5",
     "babel-preset-vue": "^2.0.2",
@@ -133,6 +134,7 @@
     "ignore-loader": "^0.1.2",
     "isomorphic-style-loader": "^4.0.0",
     "jest": "^24.8.0",
+    "jest-transform-graphql": "^2.1.0",
     "lerna": "^3.4.0",
     "less": "^3.0.2",
     "less-loader": "^4.1.0",
