--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -10,9 +10,11 @@
     "build": "cross-env NODE_ENV=production zen build",
     "clean": "rimraf build .tmp",
     "start": "node --harmony build",
-    "tests": "cross-env NODE_ENV=test PORT=7070 zen test -t 10000 --include src/__tests__/entry.ts --full-trace \"src/**/*.spec.*\" \"../../modules/**/server-ts/**/*.spec.*\"",
-    "tests:watch": "cross-env NODE_ENV=test PORT=7070 zen test -t 10000 --include src/__tests__/entry.ts --full-trace --watch \"src/**/*.spec.*\" \"../../modules/**/server-ts/**/*.spec.*\"",
+    "tests": "cross-env NODE_ENV=test PORT=7070 zen test -t 10000 --include src/__tests__/mochaSetup.ts --full-trace \"src/**/*.spec.*\" \"../../modules/**/server-ts/**/*.spec.*\"",
+    "tests:watch": "cross-env NODE_ENV=test PORT=7070 zen test -t 10000 --include src/__tests__/mochaSetup.ts --full-trace --watch \"src/**/*.spec.*\" \"../../modules/**/server-ts/**/*.spec.*\"",
     "test": "yarn tests && yarn lint",
+    "jest": "cross-env PORT=7070 jest --forceExit",
+    "jest:watch": "cross-env PORT=7070 jest --watch",
     "eslint": "eslint --fix --ext js --ext jsx --ext json src",
     "tslint": "tslint --fix -p tsconfig.json -c ../../tslint.json",
     "lint": "yarn eslint && yarn tslint",
@@ -56,10 +58,10 @@
     "@babel/polyfill": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "@babel/register": "^7.0.0",
-    "@hofstadter-io/sofa-api": "^0.3.1",
     "@gqlapp/core-common": "^0.1.0",
     "@gqlapp/database-server-ts": "^0.1.0",
     "@gqlapp/testing-server-ts": "^0.1.0",
+    "@hofstadter-io/sofa-api": "^0.3.1",
     "@types/pdfmake": "^0.1.3",
     "apollo-cache-inmemory": "1.4.2",
     "apollo-cache-router": "^1.1.6",
@@ -126,11 +128,11 @@
     "shortid": "^2.2.8",
     "source-map-support": "^0.5.0",
     "sourcemapped-stacktrace": "^1.1.8",
-    "swagger-ui-express": "^4.0.2",
     "sqlite3": "^4.0.0",
     "stripe": "^5.4.0",
     "stripe-local": "^0.1.1",
     "subscriptions-transport-ws": "^0.9.4",
+    "swagger-ui-express": "^4.0.2",
     "tslint-config-prettier": "^1.5.0",
     "universal-cookie-express": "^2.2.0",
     "uuid": "^3.2.1"
@@ -157,6 +159,7 @@
     "chai": "^4.1.2",
     "chai-http": "^4.0.0",
     "cross-env": "^5.1.1",
+    "glob": "^7.1.4",
     "ip": "^1.1.5",
     "jsdom": "^11.5.1",
     "mkdirp": "^0.5.1",
