--- a/package.json
+++ b/package.json
@@ -105,12 +105,12 @@
     "@babel/preset-typescript": "^7.0.0",
     "@babel/register": "^7.0.0",
     "@babel/runtime": "^7.0.0",
+    "@gqlapp/babel-plugin-graphql-tag": "^2.2.0",
     "@larix/zen": "^0.1.16",
     "autoprefixer": "^9.5.0",
     "babel-core": "^7.0.0-0",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^24.8.0",
-    "babel-plugin-graphql-tag": "^2.2.0",
     "babel-plugin-import": "^1.7.0",
     "babel-preset-minify": "^0.5.0-alpha.5a128fd5",
     "babel-preset-vue": "^2.0.2",
