--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -9,8 +9,8 @@
     "exp": "cross-env NODE_ENV=production zen exp",
     "exp-login": "cross-env NODE_ENV=production zen exp login -u $EXP_USERNAME -p $EXP_PASSWORD --non-interactive",
     "exp-publish": "yarn exp-login && yarn exp -- p --non-interactive",
-    "jest": "cross-env NODE_ENV=jest PORT=7070 jest",
-    "jest:watch": "cross-env NODE_ENV=jest PORT=7070 jest --watch",
+    "jest": "jest",
+    "jest:watch": "jest --watch",
     "test": "yarn tests && yarn lint",
     "eslint": "eslint --fix --ext js --ext jsx --ext json src",
     "tslint": "tslint --fix -p tsconfig.json -c ../../tslint.json",
