--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -11,7 +11,7 @@
     "exp-publish": "yarn exp-login && yarn exp -- p --non-interactive",
     "jest": "jest",
     "jest:watch": "jest --watch",
-    "test": "yarn tests && yarn lint",
+    "test": "yarn jest && yarn lint",
     "eslint": "eslint --fix --ext js --ext jsx --ext json src",
     "tslint": "tslint --fix -p tsconfig.json -c ../../tslint.json",
     "lint": "yarn eslint && yarn tslint",
