Remove mocha tests

--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "rollback": "lerna run --scope=server rollback",
     "exp": "yarn --cwd packages/mobile exp",
     "exp-publish": "lerna run --scope=mobile exp-publish --stream",
-    "jest": "lerna run jest --stream",
-    "test": "yarn jest && yarn lint",
+    "test": "yarn tests && yarn lint",
     "tests": "lerna run tests --stream",
     "tests:watch": "lerna run tests:watch --stream",
     "lint": "yarn eslint && yarn tslint",
@@ -122,7 +121,7 @@
     "eslint-plugin-import": "^2.17.2",
     "eslint-plugin-json": "^1.4.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-mocha": "^5.3.0",
+    "eslint-plugin-jest": "^22.5.1",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.4",
     "eslint-plugin-react-hooks": "^1.6.0",
@@ -154,7 +153,6 @@
     "style-loader": "^0.23.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
-    "ts-jest": "^24.0.2",
     "ts-loader": "^4.5.0",
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.5.0",
