--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -6,11 +6,9 @@
   "scripts": {
     "build": "cross-env NODE_ENV=production zen build",
     "clean": "rimraf build .tmp",
-    "jest": "jest",
-    "jest:watch": "jest --watch",
-    "tests": "cross-env NODE_ENV=test PORT=7070 zen test -t 10000 --include src/__tests__/entry.ts --full-trace \"src/**/*.spec.*\" \"../../modules/**/client-react/**/*.spec.*\"",
-    "tests:watch": "cross-env NODE_ENV=test PORT=7070 zen test -t 10000 --include src/__tests__/entry.ts --full-trace --watch \"src/**/*.spec.*\" \"../../modules/**/client-react/**/*.spec.*\"",
-    "test": "yarn jest && yarn lint",
+    "tests": "jest",
+    "tests:watch": "jest --watch",
+    "test": "yarn tests && yarn lint",
     "eslint": "eslint --fix --ext js --ext jsx --ext json .",
     "tslint": "tslint --fix -p tsconfig.json -c ../../tslint.json",
     "lint": "yarn eslint && yarn tslint",
@@ -104,9 +102,9 @@
   },
   "devDependencies": {
     "@types/chai": "^4.1.4",
+    "@types/jest": "^24.0.13",
     "@types/jsdom": "^12.2.0",
     "@types/lodash": "^4.14.112",
-    "@types/mocha": "^5.2.5",
     "@types/react": "^16.4.6",
     "@types/react-dom": "^16.8.0",
     "@types/react-helmet": "^5.0.6",
@@ -126,9 +124,6 @@
     "graphql-tools": "^4.0.4",
     "jsdom": "^11.5.1",
     "mkdirp": "^0.5.1",
-    "mocha": "^5.1.1",
-    "mocha-steps": "^1.1.0",
-    "mochapack": "^1.0.0",
     "react-addons-test-utils": "^16.0.0-alpha.3",
     "react-test-renderer": "^16.8.1",
     "react-testing-library": "^3.0.2",
