--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -5,9 +5,7 @@
   "scripts": {
     "eslint": "eslint --fix --ext js --ext jsx --ext json .",
     "tslint": "tslint --fix -p tsconfig.json -c ../../tslint.json",
-    "lint": "yarn eslint && yarn tslint",
-    "tests": "cross-env NODE_ENV=test PORT=7070 zen test -t 10000 --full-trace \"../../modules/**/common-react/**/*.spec.*\"",
-    "tests:watch": "cross-env NODE_ENV=test PORT=7070 zen test -t 10000 --full-trace --watch \"../../modules/**/common-react/**/*.spec.*\""
+    "lint": "yarn eslint && yarn tslint"
   },
   "dependencies": {
     "apollo-cache-inmemory": "1.4.2",
@@ -33,10 +31,7 @@
   "devDependencies": {
     "@types/i18next-browser-languagedetector": "^2.0.1",
     "@types/react-i18next": "^7.8.3",
-    "chai": "^4.1.2",
-    "mocha": "^5.1.1",
-    "mocha-steps": "^1.1.0",
-    "mochapack": "^1.0.0"
+    "chai": "^4.1.2"
   },
   "peerDependencies": {
     "eslint": "*"
