--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -10,11 +10,9 @@
     "build": "cross-env NODE_ENV=production zen build",
     "clean": "rimraf build .tmp",
     "start": "node --harmony build",
-    "tests": "cross-env NODE_ENV=test PORT=7070 zen test -t 10000 --include src/__tests__/mochaSetup.ts --full-trace \"src/**/*.spec.*\" \"../../modules/**/server-ts/**/*.spec.*\"",
-    "tests:watch": "cross-env NODE_ENV=test PORT=7070 zen test -t 10000 --include src/__tests__/mochaSetup.ts --full-trace --watch \"src/**/*.spec.*\" \"../../modules/**/server-ts/**/*.spec.*\"",
-    "test": "yarn jest && yarn lint",
-    "jest": "cross-env PORT=7070 jest --forceExit",
-    "jest:watch": "cross-env PORT=7070 jest --watch",
+    "test": "yarn tests && yarn lint",
+    "tests": "cross-env PORT=7070 jest --forceExit",
+    "tests:watch": "cross-env PORT=7070 jest --watch",
     "eslint": "eslint --fix --ext js --ext jsx --ext json src",
     "tslint": "tslint --fix -p tsconfig.json -c ../../tslint.json",
     "lint": "yarn eslint && yarn tslint",
@@ -140,6 +138,7 @@
   "devDependencies": {
     "@types/chai": "^4.1.4",
     "@types/chai-http": "^3.0.5",
+    "@types/jest": "^24.0.13",
     "@types/graphql-iso-date": "^3.3.0",
     "@types/graphql-resolve-batch": "^1.1.1",
     "@types/humps": "^1.1.2",
@@ -163,9 +162,6 @@
     "ip": "^1.1.5",
     "jsdom": "^11.5.1",
     "mkdirp": "^0.5.1",
-    "mocha": "^5.1.1",
-    "mocha-steps": "^1.1.0",
-    "mochapack": "^1.0.0",
     "react-addons-test-utils": "^16.0.0-alpha.3",
     "react-test-renderer": "^16.8.1",
     "request": "^2.83.0",
