Force run tests in parallel

--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "exp": "yarn --cwd packages/mobile exp",
     "exp-publish": "lerna run --scope=mobile exp-publish --stream",
     "test": "yarn tests && yarn lint",
-    "tests": "lerna run tests --stream",
-    "tests:watch": "lerna run tests:watch --stream",
+    "tests": "lerna run --parallel tests --stream",
+    "tests:watch": "lerna run --parallel tests:watch --stream",
     "lint": "yarn eslint && yarn tslint",
     "eslint": "eslint --fix --ext js --ext jsx --ext json .",
     "tslint": "tslint --fix -p tsconfig.json -c tslint.json",
