--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "watch:android": "zen -e android -d client -d ios watch",
     "watch:ios": "zen -e ios -d client -d android watch",
     "watch-client": "cross-env DISABLE_SSR=true lerna run --scope=client watch --stream",
+    "storybook": "lerna run --scope=client storybook --stream",
     "cli": "node tools/cli",
     "stripe:setup": "lerna run --scope=server stripe:setup",
     "seed": "lerna run --scope=server seed --stream",
