--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -14,7 +14,9 @@
     "lint": "yarn eslint && yarn tslint",
     "watch": "zen watch",
     "heroku-postbuild": "yarn build",
-    "cli": "node ../../tools/cli"
+    "cli": "node ../../tools/cli",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "repository": {
     "type": "git",
@@ -60,12 +62,12 @@
     "apollo-link-state": "^0.4.1",
     "apollo-link-ws": "^1.0.3",
     "apollo-logger": "^0.3.2",
-    "apollo-upload-client": "^8.0.0",
+    "apollo-upload-client": "^10.0.0",
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.3.1",
     "connected-react-router": "^5.0.0",
     "error-stack-parser": "^2.0.1",
-    "extract-files": "^3.1.0",
+    "extract-files": "^5.0.0",
     "filesize": "^3.5.11",
     "formik": "^1.3.1",
     "graphql": "^14.1.1",
@@ -101,6 +103,11 @@
     "subscriptions-transport-ws": "^0.9.4"
   },
   "devDependencies": {
+    "@storybook/addon-actions": "^5.1.1",
+    "@storybook/addon-links": "^5.1.1",
+    "@storybook/addons": "^5.1.1",
+    "@storybook/react": "^5.1.1",
+    "@types/storybook__react": "^4.0.0",
     "@types/chai": "^4.1.4",
     "@types/jest": "^24.0.13",
     "@types/jsdom": "^12.2.0",
@@ -116,6 +123,7 @@
     "@types/webpack-env": "^1.13.6",
     "apollo-utilities": "^1.0.3",
     "autoprefixer": "^8.3.0",
+    "babel-loader": "^8.0.6",
     "babel-plugin-styled-components": "^1.10.0",
     "chai": "^4.1.2",
     "chai-http": "^4.0.0",
