--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -80,7 +80,7 @@
     "lodash": "^4.17.4",
     "minilog": "^3.1.0",
     "prop-types": "^15.6.0",
-    "react": "^16.8.0",
+    "react": "16.8.3",
     "react-apollo": "^2.5.5",
     "react-art": "^16.8.0",
     "react-cookie": "^2.2.0",
@@ -133,7 +133,7 @@
     "jsdom": "^11.5.1",
     "mkdirp": "^0.5.1",
     "react-addons-test-utils": "^16.0.0-alpha.3",
-    "react-test-renderer": "^16.8.1",
+    "react-test-renderer": "16.8.3",
     "react-testing-library": "^3.0.2",
     "request": "^2.83.0",
     "rimraf": "^2.6.2"
@@ -141,9 +141,9 @@
   "optionalDependencies": {
     "@expo/vector-icons": "^10.0.1",
     "antd-mobile-rn": "^2.2.1",
-    "expo": "^32.0.0",
+    "expo": "^33.0.0",
     "native-base": "^2.3.5",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
     "react-native-credit-card-input": "^0.4.1",
     "react-native-elements": "^0.19.1",
     "react-native-gifted-chat": "^0.4.3",
@@ -151,7 +151,7 @@
     "react-native-mime-types": "^2.2.1",
     "react-native-modal": "^5.4.0",
     "react-native-simple-picker": "^3.1.1",
-    "react-navigation": "^3.9.1",
+    "react-navigation": "^3.11.0",
     "uuid": "^3.3.2"
   },
   "peerDependencies": {
