--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -110,7 +110,7 @@
     "performance-now": "^2.1.0",
     "pg": "^7.4.0",
     "prop-types": "^15.6.0",
-    "react": "^16.8.0",
+    "react": "16.8.3",
     "react-apollo": "^2.3.1",
     "react-art": "^16.8.0",
     "react-cookie": "^2.2.0",
@@ -162,7 +162,7 @@
     "jsdom": "^11.5.1",
     "mkdirp": "^0.5.1",
     "react-addons-test-utils": "^16.0.0-alpha.3",
-    "react-test-renderer": "^16.8.1",
+    "react-test-renderer": "16.8.3",
     "request": "^2.83.0",
     "resolve-url-loader": "^2.2.1",
     "rimraf": "^2.6.2",
