--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build": "lerna run build --stream",
     "clean": "lerna run clean --stream",
     "start": "lerna run --scope=server start --stream",
-    "watch": "zen watch",
+    "watch": "lerna run --scope={server,client} --parallel watch --stream",
     "watch:vue": "zen -d client -e vue watch",
     "watch:angular": "zen -d client -e angular watch",
     "watch:android": "zen -e android -d client -d ios watch",
@@ -166,6 +166,7 @@
     "vue-template-compiler": "^2.5.22",
     "wait-on": "^3.2.0",
     "webpack": "^4.29.3",
+    "webpack-cli": "^3.3.3",
     "webpack-dev-middleware": "^3.1.3",
     "webpack-dev-server": "^3.1.5",
     "webpack-hot-middleware": "^2.22.3",
