--- a/package.json
+++ b/package.json
@@ -128,6 +128,7 @@
     "eslint-plugin-react-hooks": "^1.6.0",
     "file-loader": "^2.0.0",
     "fork-ts-checker-webpack-plugin": "^0.4.9",
+    "hard-source-webpack-plugin": "^0.13.1",
     "heroku-babel-loader": "^8.0.4",
     "html-webpack-plugin": "^3.2.0",
     "http-proxy-middleware": "^0.19.0",
