--- a/package.json
+++ b/package.json
@@ -166,7 +166,7 @@
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.5.22",
     "wait-on": "^3.2.0",
-    "webpack": "^4.29.3",
+    "webpack": "^4.33.0",
     "webpack-cli": "^3.3.3",
     "webpack-dev-middleware": "^3.1.3",
     "webpack-dev-server": "^3.1.5",
@@ -174,6 +174,7 @@
     "webpack-manifest-plugin": "^2.0.3",
     "webpack-merge": "^4.1.4",
     "webpack-node-externals": "^1.7.2",
+    "webpack-shell-plugin": "^0.5.0",
     "webpack-sources": "^1.1.0",
     "webpack-virtual-modules": "^0.1.10",
     "whatwg-fetch": "^2.0.4"
