--- a/packages/client-vue/package.json
+++ b/packages/client-vue/package.json
@@ -4,14 +4,14 @@
   "version": "1.0.0",
   "main": "src",
   "scripts": {
-    "build": "cross-env NODE_ENV=production zen build",
+    "build": "cross-env NODE_ENV=production webpack --progress",
     "clean": "rimraf build .tmp",
     "tests": "echo",
     "test": "yarn tests && yarn lint",
     "eslint": "eslint --fix --ext js --ext jsx --ext json src",
     "tslint": "tslint --fix -p tsconfig.json -c ../../tslint.json",
     "lint": "yarn eslint && yarn tslint",
-    "watch": "zen watch",
+    "watch": "webpack-dev-server",
     "heroku-postbuild": "yarn build",
     "cli": "node ../../tools/cli"
   },
