--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
     "babel-core": "^7.0.0-0",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^24.8.0",
+    "babel-loader": "^8.0.6",
     "babel-plugin-import": "^1.7.0",
     "babel-preset-minify": "^0.5.0-alpha.5a128fd5",
     "babel-preset-vue": "^2.0.2",
@@ -126,7 +127,6 @@
     "file-loader": "^2.0.0",
     "fork-ts-checker-webpack-plugin": "^0.4.9",
     "hard-source-webpack-plugin": "^0.13.1",
-    "heroku-babel-loader": "^8.0.4",
     "html-webpack-plugin": "^3.2.0",
     "http-proxy-middleware": "^0.19.0",
     "husky": "^1.1.2",
