--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "start": "lerna run --scope=server start --stream",
     "watch": "lerna run --scope={server,client} --parallel watch --stream",
     "watch:vue": "cross-env DISABLE_SSR=true lerna run --scope={server,client-vue} --parallel watch --stream",
-    "watch:angular": "zen -d client -e angular watch",
-    "watch:android": "zen -e android -d client -d ios watch",
-    "watch:ios": "zen -e ios -d client -d android watch",
+    "watch:angular": "cross-env DISABLE_SSR=true lerna run --scope={server,client-angular} --parallel watch --stream",
+    "watch:android": "lerna run --scope={server,mobile} --parallel watch:android --stream",
+    "watch:ios": "lerna run --scope={server,mobile} --parallel watch:ios --stream",
     "watch-client": "cross-env DISABLE_SSR=true lerna run --scope=client watch --stream",
     "storybook": "lerna run --scope=client storybook --stream",
     "cli": "node tools/cli",
