--- a/packages/client-angular/package.json
+++ b/packages/client-angular/package.json
@@ -4,14 +4,14 @@
   "version": "1.0.0",
   "main": "src",
   "scripts": {
-    "build": "cross-env NODE_ENV=production zen build",
+    "build": "cross-env NODE_ENV=production webpack --progress",
     "clean": "rimraf build .tmp",
     "tests": "echo",
     "test": "yarn tests && yarn lint",
     "eslint": "eslint --fix --ext js --ext jsx --ext json src",
     "tslint": "tslint --fix -p tsconfig.json -c ../../tslint.json",
     "lint": "yarn eslint && yarn tslint",
-    "watch": "zen watch",
+    "watch": "webpack-dev-server",
     "heroku-postbuild": "yarn build"
   },
   "repository": {
@@ -33,41 +33,41 @@
   "author": "SysGears INC",
   "license": "MIT",
   "dependencies": {
-    "@angular/animations": "^7.1.4",
-    "@angular/cdk": "^7.2.0",
-    "@angular/common": "^7.0.3",
-    "@angular/compiler": "^7.0.3",
-    "@angular/core": "^7.0.3",
-    "@angular/forms": "^7.1.4",
-    "@angular/material": "^7.2.0",
-    "@angular/platform-browser": "^7.0.3",
-    "@angular/platform-browser-dynamic": "^7.0.3",
-    "@angular/router": "^7.0.3",
+    "@angular/animations": "^8.0.0",
+    "@angular/cdk": "^8.0.0",
+    "@angular/common": "^8.0.0",
+    "@angular/compiler": "^8.0.0",
+    "@angular/core": "^8.0.0",
+    "@angular/forms": "^8.0.0",
+    "@angular/material": "^8.0.0",
+    "@angular/platform-browser": "^8.0.0",
+    "@angular/platform-browser-dynamic": "^8.0.0",
+    "@angular/router": "^8.0.0",
     "@angularclass/hmr": "^2.1.3",
     "@gqlapp/core-client-angular": "^0.1.0",
     "@gqlapp/counter-client-angular": "^0.1.0",
     "@gqlapp/counter-common": "^0.1.0",
     "@gqlapp/look-client-angular": "^0.1.0",
     "@gqlapp/module-client-angular": "^0.1.0",
-    "@ngrx/store": "^7.2.0",
-    "apollo-angular": "^1.5.0",
-    "apollo-angular-link-http": "^1.4.0",
-    "apollo-cache": "^1.1.25",
-    "apollo-cache-inmemory": "1.4.2",
+    "@ngrx/store": "^8.0.0",
+    "apollo-angular": "^1.6.0",
+    "apollo-angular-link-http": "^1.7.0",
+    "apollo-cache": "^1.3.2",
+    "apollo-cache-inmemory": "^1.6.2",
     "apollo-cache-router": "^1.1.6",
-    "apollo-client": "^2.4.7",
-    "apollo-link": "^1.0.6",
+    "apollo-client": "^2.6.2",
+    "apollo-link": "^1.2.11",
     "apollo-link-batch-http": "^1.2.11",
-    "apollo-link-context": "^1.0.7",
-    "apollo-link-state": "^0.4.1",
-    "apollo-link-ws": "^1.0.3",
+    "apollo-link-context": "^1.0.17",
+    "apollo-link-state": "^0.4.2",
+    "apollo-link-ws": "^1.0.17",
     "apollo-logger": "^0.3.2",
-    "apollo-upload-client": "^10.0.0",
+    "apollo-upload-client": "^10.0.1",
     "graphql": "^14.1.1",
     "minilog": "^3.1.0",
-    "rxjs": "^6.3.3",
+    "rxjs": "^6.5.2",
     "subscriptions-transport-ws": "^0.9.4",
-    "zone.js": "^0.8.26"
+    "zone.js": "^0.9.1"
   },
   "devDependencies": {
     "@larix/zen": "^0.1.11",
