--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -20,6 +20,8 @@
     "migrate": "knex migrate:latest",
     "rollback": "knex migrate:rollback",
     "watch": "webpack --watch",
+    "watch:android": "webpack --watch",
+    "watch:ios": "webpack --watch",
     "heroku-postbuild": "yarn build && yarn seed && yarn stripe:setup",
     "cli": "node ../../tools/cli",
     "stripe:setup": "node ../../modules/payments/server-ts/stripe/subscription/cli/stripeSetup"
