Switch to webpack.config.js for building artifacts (#1100)
* Switch to webpack.config.js for React frontend builds

* Use babel to transpile web frontend

* Add storybook support

* Switch to webpack.config.js for server

* Use default Heroku caching

* Use webpack.config.js for Vue

* Switch to babel-loader

* Add webpack.config.js for Angular

* Fix storybook support

--- a/package.json
+++ b/package.json
@@ -5,18 +5,15 @@
   "engines": {
     "yarn": ">= 1.0.0"
   },
-  "cacheDirectories": [
-    ".cache"
-  ],
   "scripts": {
     "build": "lerna run build --stream",
     "clean": "lerna run clean --stream",
     "start": "lerna run --scope=server start --stream",
-    "watch": "zen watch",
-    "watch:vue": "zen -d client -e vue watch",
-    "watch:angular": "zen -d client -e angular watch",
-    "watch:android": "zen -e android -d client -d ios watch",
-    "watch:ios": "zen -e ios -d client -d android watch",
+    "watch": "lerna run --scope={server,client} --parallel watch --stream",
+    "watch:vue": "cross-env DISABLE_SSR=true lerna run --scope={server,client-vue} --parallel watch --stream",
+    "watch:angular": "cross-env DISABLE_SSR=true lerna run --scope={server,client-angular} --parallel watch --stream",
+    "watch:android": "lerna run --scope={server,mobile} --parallel watch:android --stream",
+    "watch:ios": "lerna run --scope={server,mobile} --parallel watch:ios --stream",
     "watch-client": "cross-env DISABLE_SSR=true lerna run --scope=client watch --stream",
     "storybook": "lerna run --scope=client storybook --stream",
     "cli": "node tools/cli",
@@ -111,6 +108,7 @@
     "babel-core": "^7.0.0-0",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^24.8.0",
+    "babel-loader": "^8.0.6",
     "babel-plugin-import": "^1.7.0",
     "babel-preset-minify": "^0.5.0-alpha.5a128fd5",
     "babel-preset-vue": "^2.0.2",
@@ -128,7 +126,7 @@
     "eslint-plugin-react-hooks": "^1.6.0",
     "file-loader": "^2.0.0",
     "fork-ts-checker-webpack-plugin": "^0.4.9",
-    "heroku-babel-loader": "^8.0.4",
+    "hard-source-webpack-plugin": "^0.13.1",
     "html-webpack-plugin": "^3.2.0",
     "http-proxy-middleware": "^0.19.0",
     "husky": "^1.1.2",
@@ -165,13 +163,15 @@
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.5.22",
     "wait-on": "^3.2.0",
-    "webpack": "^4.29.3",
+    "webpack": "^4.33.0",
+    "webpack-cli": "^3.3.3",
     "webpack-dev-middleware": "^3.1.3",
     "webpack-dev-server": "^3.1.5",
     "webpack-hot-middleware": "^2.22.3",
     "webpack-manifest-plugin": "^2.0.3",
     "webpack-merge": "^4.1.4",
     "webpack-node-externals": "^1.7.2",
+    "webpack-shell-plugin": "^0.5.0",
     "webpack-sources": "^1.1.0",
     "webpack-virtual-modules": "^0.1.10",
     "whatwg-fetch": "^2.0.4"
