--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "yarn": ">= 1.0.0"
   },
   "scripts": {
-    "build": "lerna run build --stream",
+    "build": "lerna run --scope={server,client,mobile} --parallel watch --stream",
     "clean": "lerna run clean --stream",
     "start": "lerna run --scope=server start --stream",
     "watch": "lerna run --scope={server,client} --parallel watch --stream",
