--- a/.travis.yml
+++ b/.travis.yml
@@ -3,14 +3,16 @@ node_js:
 - '10'
 cache:
   directories:
-  - "$HOME/.cache/yarn"
-  - ".cache"
-dist: trusty
+    - node_modules
+  yarn: true
+dist: xenial
 os:
 - linux
 script:
 - yarn test
 before_deploy: rm -rf node_modules
+before_install:
+  - npm install -g yarn
 deploy:
   provider: heroku
   api_key:
