--- a/.travis.yml
+++ b/.travis.yml
@@ -2,17 +2,14 @@ language: node_js
 node_js:
 - '10'
 cache:
-  directories:
-    - node_modules
   yarn: true
+  directories:
+    - node_modules/.cache
 dist: xenial
 os:
 - linux
 script:
 - yarn test
-before_deploy: rm -rf node_modules
-before_install:
-  - npm install -g yarn
 deploy:
   provider: heroku
   api_key:
