--- a/packages/client-angular/package.json
+++ b/packages/client-angular/package.json
@@ -11,8 +11,7 @@
     "eslint": "eslint --fix --ext js --ext jsx --ext json src",
     "tslint": "tslint --fix -p tsconfig.json -c ../../tslint.json",
     "lint": "yarn eslint && yarn tslint",
-    "watch": "webpack-dev-server",
-    "heroku-postbuild": "yarn build"
+    "watch": "webpack-dev-server"
   },
   "repository": {
     "type": "git",
