--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "watch:android": "lerna run --scope={server,mobile} --parallel watch:android --stream",
     "watch:ios": "lerna run --scope={server,mobile} --parallel watch:ios --stream",
     "watch-client": "cross-env DISABLE_SSR=true lerna run --scope=client watch --stream",
+    "watch-server": "cross-env DISABLE_SSR=true lerna run --scope=server watch --stream",
     "storybook": "lerna run --scope=client storybook --stream",
     "cli": "node tools/cli",
     "stripe:setup": "lerna run --scope=server stripe:setup",
