Add minimal working vanilla Expo build scripts

--- a/packages/mobile/app.json
+++ b/packages/mobile/app.json
@@ -11,6 +11,9 @@
     },
     "android": {
       "package": "com.sysgears.apollokit"
+    },
+    "packagerOpts": {
+      "config": "metro.config.js"
     }
   }
 }
