--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -2,7 +2,7 @@
   "name": "mobile",
   "private": true,
   "version": "1.0.0",
-  "main": "src",
+  "main": "src/index.ts",
   "scripts": {
     "build": "cross-env NODE_ENV=production zen build",
     "clean": "rimraf build .expo .tmp",
@@ -19,6 +19,7 @@
     "watch:android": "zen -e android -d ios watch",
     "watch:ios": "zen -e ios -d android watch",
     "heroku-postbuild": "yarn build && yarn exp-publish",
+    "postinstall": "expo-yarn-workspaces postinstall",
     "cli": "node ../../tools/cli"
   },
   "repository": {
@@ -88,6 +89,7 @@
     "uuid": "^3.3.2"
   },
   "devDependencies": {
+    "@bam.tech/react-native-graphql-transformer": "^0.1.4",
     "@types/expo": "^32.0.13",
     "@types/jest": "^24.0.13",
     "@types/react-native-keyboard-spacer": "^0.4.1",
@@ -101,8 +103,8 @@
     "connect": "^3.6.5",
     "cross-env": "^5.1.1",
     "exp": "^57.2.1",
-    "expo-file-system": "^1.0.1",
     "expo-react-native-adapter": "^1.0.1",
+    "expo-yarn-workspaces": "^1.2.0",
     "freeport-async": "^1.1.1",
     "haul": "^1.0.0-rc.9",
     "image-size": "^0.6.2",
@@ -112,8 +114,7 @@
     "react-test-renderer": "16.8.3",
     "request": "^2.83.0",
     "rimraf": "^2.6.2",
-    "ws": "^5.1.1",
-    "xdl": "^49.2.0"
+    "ws": "^5.1.1"
   },
   "peerDependencies": {
     "@larix/zen": "^0.1.0",
