--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "clean": "lerna run clean --stream",
     "start": "lerna run --scope=server start --stream",
     "watch": "lerna run --scope={server,client} --parallel watch --stream",
-    "watch:vue": "cross-env DISABLE_SSR=true lerna run --scope={server,client-vue} --parallel watch --stream",
-    "watch:angular": "cross-env DISABLE_SSR=true lerna run --scope={server,client-angular} --parallel watch --stream",
+    "watch:vue": "cross-env SSR=false lerna run --scope={server,client-vue} --parallel watch --stream",
+    "watch:angular": "cross-env SSR=false lerna run --scope={server,client-angular} --parallel watch --stream",
     "watch:android": "lerna run --scope={server,mobile} --parallel watch:android --stream",
     "watch:ios": "lerna run --scope={server,mobile} --parallel watch:ios --stream",
-    "watch-client": "cross-env DISABLE_SSR=true lerna run --scope=client watch --stream",
-    "watch-server": "cross-env DISABLE_SSR=true lerna run --scope=server watch --stream",
+    "watch-client": "cross-env SSR=false lerna run --scope=client watch --stream",
+    "watch-server": "cross-env SSR=false lerna run --scope=server watch --stream",
     "storybook": "lerna run --scope=client storybook --stream",
     "cli": "node tools/cli",
     "stripe:setup": "lerna run --scope=server stripe:setup",
