--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -2,22 +2,20 @@
   "name": "mobile",
   "private": true,
   "version": "1.0.0",
-  "main": "src/index.ts",
+  "main": "src",
   "scripts": {
-    "build": "cross-env NODE_ENV=production zen build",
     "clean": "rimraf build .expo .tmp",
-    "exp": "cross-env NODE_ENV=production zen exp",
-    "exp-login": "cross-env NODE_ENV=production zen exp login -u $EXP_USERNAME -p $EXP_PASSWORD --non-interactive",
-    "exp-publish": "yarn exp-login && yarn exp -- p --non-interactive",
+    "exp-login": "cross-env NODE_ENV=production expo login -u $EXP_USERNAME -p $EXP_PASSWORD --non-interactive",
+    "exp-publish": "yarn expo-login && yarn expo -- p --non-interactive",
     "tests": "jest",
     "tests:watch": "jest --watch",
     "test": "yarn tests && yarn lint",
     "eslint": "eslint --fix --ext js --ext jsx --ext json src",
     "tslint": "tslint --fix -p tsconfig.json -c ../../tslint.json",
     "lint": "yarn eslint && yarn tslint",
-    "watch": "zen watch",
-    "watch:android": "zen -e android -d ios watch",
-    "watch:ios": "zen -e ios -d android watch",
+    "watch": "expo start",
+    "watch:android": "expo start --android",
+    "watch:ios": "expo start --ios",
     "heroku-postbuild": "yarn build && yarn exp-publish",
     "postinstall": "expo-yarn-workspaces postinstall",
     "cli": "node ../../tools/cli"
@@ -96,6 +94,7 @@
     "@types/react-navigation": "^3.0.5",
     "@types/react-test-renderer": "^16.0.2",
     "apollo-utilities": "^1.0.3",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.3",
     "caporal": "^0.10.0",
     "chai": "^4.1.2",
     "chai-http": "^4.0.0",
