Switch from @babel/polyfill to core-js/stable

--- a/package.json
+++ b/package.json
@@ -119,6 +119,7 @@
     "cache-loader": "^1.2.2",
     "clean-webpack-plugin": "^1.0.1",
     "css-loader": "^1.0.0",
+    "core-js": "^3.1.3",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.17.2",
@@ -148,6 +149,7 @@
     "openurl": "^1.1.1",
     "postcss-loader": "^3.0.0",
     "prettier": "^1.9.2",
+    "regenerator-runtime": "^0.13.2",
     "qrcode-terminal": "^0.12.0",
     "raw-loader": "^0.5.1",
     "sass-loader": "^7.1.0",
