--- a/package.json
+++ b/package.json
@@ -2,10 +2,6 @@
   "name": "apollo-universal-starter-kit",
   "private": true,
   "version": "1.0.0",
-  "cacheDirectories": [
-    "node_modules",
-    ".cache"
-  ],
   "engines": {
     "yarn": ">= 1.0.0"
   },
@@ -14,12 +10,12 @@
     "clean": "lerna run clean --stream",
     "start": "lerna run --scope=server start --stream",
     "watch": "lerna run --scope={server,client} --parallel watch --stream",
-    "watch:vue": "cross-env DISABLE_SSR=true lerna run --scope={server,client-vue} --parallel watch --stream",
-    "watch:angular": "cross-env DISABLE_SSR=true lerna run --scope={server,client-angular} --parallel watch --stream",
+    "watch:vue": "cross-env SSR=false lerna run --scope={server,client-vue} --parallel watch --stream",
+    "watch:angular": "cross-env SSR=false lerna run --scope={server,client-angular} --parallel watch --stream",
     "watch:android": "lerna run --scope={server,mobile} --parallel watch:android --stream",
     "watch:ios": "lerna run --scope={server,mobile} --parallel watch:ios --stream",
-    "watch-client": "cross-env DISABLE_SSR=true lerna run --scope=client watch --stream",
-    "watch-server": "cross-env DISABLE_SSR=true lerna run --scope=server watch --stream",
+    "watch-client": "cross-env SSR=false lerna run --scope=client watch --stream",
+    "watch-server": "cross-env SSR=false lerna run --scope=server watch --stream",
     "storybook": "lerna run --scope=client storybook --stream",
     "cli": "node tools/cli",
     "stripe:setup": "lerna run --scope=server stripe:setup",
@@ -108,7 +104,6 @@
     "@babel/register": "^7.0.0",
     "@babel/runtime": "^7.0.0",
     "@gqlapp/babel-plugin-graphql-tag": "^2.2.0",
-    "@larix/zen": "^0.1.22",
     "autoprefixer": "^9.5.0",
     "babel-core": "^7.0.0-0",
     "babel-eslint": "^10.0.1",
@@ -120,6 +115,7 @@
     "cache-loader": "^1.2.2",
     "clean-webpack-plugin": "^1.0.1",
     "css-loader": "^1.0.0",
+    "core-js": "^3.1.3",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.17.2",
@@ -149,6 +145,7 @@
     "openurl": "^1.1.1",
     "postcss-loader": "^3.0.0",
     "prettier": "^1.9.2",
+    "regenerator-runtime": "^0.13.2",
     "qrcode-terminal": "^0.12.0",
     "raw-loader": "^0.5.1",
     "sass-loader": "^7.1.0",
