--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -4,21 +4,19 @@
   "version": "1.0.0",
   "main": "src",
   "scripts": {
-    "build": "cross-env NODE_ENV=production zen build",
     "clean": "rimraf build .expo .tmp",
-    "exp": "cross-env NODE_ENV=production zen exp",
-    "exp-login": "cross-env NODE_ENV=production zen exp login -u $EXP_USERNAME -p $EXP_PASSWORD --non-interactive",
-    "exp-publish": "yarn exp-login && yarn exp -- p --non-interactive",
+    "exp-login": "cross-env NODE_ENV=production expo login -u $EXP_USERNAME -p $EXP_PASSWORD --non-interactive",
+    "exp-publish": "yarn exp-login && yarn expo -- p --non-interactive",
     "tests": "jest",
     "tests:watch": "jest --watch",
     "test": "yarn tests && yarn lint",
     "eslint": "eslint --fix --ext js --ext jsx --ext json src",
     "tslint": "tslint --fix -p tsconfig.json -c ../../tslint.json",
     "lint": "yarn eslint && yarn tslint",
-    "watch": "zen watch",
-    "watch:android": "zen -e android -d ios watch",
-    "watch:ios": "zen -e ios -d android watch",
-    "heroku-postbuild": "yarn build && yarn exp-publish",
+    "watch": "expo start",
+    "watch:android": "expo start --android",
+    "watch:ios": "expo start --ios",
+    "postinstall": "expo-yarn-workspaces postinstall",
     "cli": "node ../../tools/cli"
   },
   "repository": {
@@ -52,6 +50,7 @@
     "apollo-logger": "^0.3.2",
     "apollo-upload-client": "^10.0.0",
     "expo": "^33.0.0",
+    "expo-cli": "^2.19.5",
     "expo-constants": "^5.0.1",
     "expo-file-system": "^5.0.1",
     "expo-font": "^5.0.1",
@@ -88,12 +87,14 @@
     "uuid": "^3.3.2"
   },
   "devDependencies": {
+    "@bam.tech/react-native-graphql-transformer": "^0.1.4",
     "@types/expo": "^32.0.13",
     "@types/jest": "^24.0.13",
     "@types/react-native-keyboard-spacer": "^0.4.1",
     "@types/react-navigation": "^3.0.5",
     "@types/react-test-renderer": "^16.0.2",
     "apollo-utilities": "^1.0.3",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.3",
     "caporal": "^0.10.0",
     "chai": "^4.1.2",
     "chai-http": "^4.0.0",
@@ -101,8 +102,8 @@
     "connect": "^3.6.5",
     "cross-env": "^5.1.1",
     "exp": "^57.2.1",
-    "expo-file-system": "^1.0.1",
     "expo-react-native-adapter": "^1.0.1",
+    "expo-yarn-workspaces": "^1.2.0",
     "freeport-async": "^1.1.1",
     "haul": "^1.0.0-rc.9",
     "image-size": "^0.6.2",
@@ -112,11 +113,9 @@
     "react-test-renderer": "16.8.3",
     "request": "^2.83.0",
     "rimraf": "^2.6.2",
-    "ws": "^5.1.1",
-    "xdl": "^49.2.0"
+    "ws": "^5.1.1"
   },
   "peerDependencies": {
-    "@larix/zen": "^0.1.0",
     "eslint": "*"
   }
 }
