Return .graphql files for schema on backend

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -14,7 +14,7 @@
     "tests": "cross-env PORT=7070 jest --forceExit",
     "tests:watch": "cross-env PORT=7070 jest --watch",
     "eslint": "eslint --fix --ext js --ext jsx --ext json src",
-    "tslint": "tslint --fix -p tsconfig.json -c ../../tslint.json",
+    "tslint": "tslint --fix -p ../../tsconfig.json -c ../../tslint.json",
     "lint": "yarn eslint && yarn tslint",
     "seed": "yarn migrate && knex seed:run",
     "migrate": "knex migrate:latest",
@@ -154,6 +154,7 @@
     "@types/stripe": "^5.0.21",
     "@types/webpack-env": "^1.13.5",
     "apollo-utilities": "^1.0.3",
+    "babel-plugin-import-graphql": "^2.7.0",
     "caporal": "^0.10.0",
     "chai": "^4.1.2",
     "chai-http": "^4.0.0",
