Use compression for Express

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "yarn": ">= 1.0.0"
   },
   "scripts": {
-    "build": "lerna run --scope={server,client,mobile} --parallel watch --stream",
+    "build": "lerna run --scope={server,client,mobile} --parallel build --stream",
     "clean": "lerna run clean --stream",
     "start": "lerna run --scope=server start --stream",
     "watch": "lerna run --scope={server,client} --parallel watch --stream",
@@ -98,12 +98,15 @@
     "@babel/plugin-transform-for-of": "^7.0.0",
     "@babel/plugin-transform-regenerator": "^7.0.0",
     "@babel/plugin-transform-runtime": "^7.0.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-flow": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.0.0",
     "@babel/register": "^7.0.0",
     "@babel/runtime": "^7.0.0",
+    "@loadable/babel-plugin": "^5.10.0",
+    "@loadable/webpack-plugin": "^5.7.1",
     "autoprefixer": "^9.5.0",
     "babel-core": "^7.0.0-0",
     "babel-eslint": "^10.0.1",
