--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -52,6 +52,7 @@
     "@gqlapp/payments-client-react": "^0.1.0",
     "@gqlapp/reports-client-react": "^0.1.0",
     "@gqlapp/validation-common-react": "^0.1.0",
+    "@loadable/component": "^5.10.1",
     "antd": "^3.16.6",
     "apollo-cache-inmemory": "1.4.2",
     "apollo-cache-router": "^1.1.6",
@@ -88,18 +89,18 @@
     "react-dom": "^16.8.0",
     "react-dropzone": "^4.2.3",
     "react-ga": "^2.3.5",
-    "react-helmet": "^5.2.0",
+    "react-helmet": "^5.2.1",
     "react-i18next": "^7.6.0",
     "react-redux": "^5.0.0",
-    "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2",
+    "react-router": "^5.0.0",
+    "react-router-dom": "^5.0.0",
     "react-stripe-elements": "^1.2.1",
     "react-transition-group": "^2.3.0-beta.0",
     "reactstrap": "^5.0.0-beta",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.2",
     "sourcemapped-stacktrace": "^1.1.8",
-    "styled-components": "^4.2.0",
+    "styled-components": "^4.3.1",
     "subscriptions-transport-ws": "^0.9.4"
   },
   "devDependencies": {
@@ -110,13 +111,14 @@
     "@types/chai": "^4.1.4",
     "@types/jest": "^24.0.13",
     "@types/jsdom": "^12.2.0",
+    "@types/loadable__component": "^5.9.0",
     "@types/lodash": "^4.14.112",
     "@types/react": "^16.4.6",
     "@types/react-dom": "^16.8.0",
     "@types/react-helmet": "^5.0.6",
     "@types/react-native": "^0.55.7",
     "@types/react-redux": "^5.0.0",
-    "@types/react-router-dom": "^4.2.7",
+    "@types/react-router-dom": "^4.3.4",
     "@types/react-stripe-elements": "^1.1.7",
     "@types/storybook__react": "^4.0.0",
     "@types/styled-components": "^4.1.14",
