--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -61,6 +61,9 @@
     "@gqlapp/database-server-ts": "^0.1.0",
     "@gqlapp/testing-server-ts": "^0.1.0",
     "@hofstadter-io/sofa-api": "^0.3.1",
+    "@loadable/component": "^5.10.1",
+    "@loadable/server": "^5.9.0",
+    "@types/compression": "^0.0.36",
     "@types/pdfmake": "^0.1.3",
     "apollo-cache-inmemory": "1.4.2",
     "apollo-cache-router": "^1.1.6",
@@ -117,9 +120,9 @@
     "react-cookie": "^2.2.0",
     "react-debounce-input": "^3.1.0",
     "react-dom": "^16.8.0",
-    "react-helmet": "^5.2.0",
+    "react-helmet": "^5.2.1",
     "react-redux": "^5.0.0",
-    "react-router": "^4.2.0",
+    "react-router": "^5.0.0",
     "react-stripe-elements": "^1.2.1",
     "redux": "^4.0.1",
     "roboto-npm-webfont": "^1.0.1",
@@ -146,6 +149,7 @@
     "@types/i18next-express-middleware": "^0.0.33",
     "@types/jest": "^24.0.13",
     "@types/knex": "^0.14.20",
+    "@types/loadable__server": "^5.9.1",
     "@types/mkdirp": "^0.5.2",
     "@types/nodemailer": "^4.6.2",
     "@types/react-dom": "^16.8.0",
