--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,8 +1,7 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "target": "es2017",
-    "module": "es2017",
+    "target": "esnext",
     "lib": ["es2015", "dom", "esnext"]
   },
   "include": [
