--- a/package.json
+++ b/package.json
@@ -112,6 +112,7 @@
     "babel-eslint": "^10.0.1",
     "babel-jest": "^24.8.0",
     "babel-loader": "^8.0.6",
+    "babel-plugin-dynamic-import-node": "^2.2.0",
     "babel-plugin-import": "^1.7.0",
     "babel-preset-minify": "^0.5.0-alpha.5a128fd5",
     "babel-preset-vue": "^2.0.2",
