--- a/tools/templates/module/client-react/package.json
+++ b/tools/templates/module/client-react/package.json
@@ -1,5 +1,8 @@
 {
   "name": "@gqlapp/$-module$-client-react",
   "version": "1.0.0",
-  "private": true
+  "private": true,
+  "dependencies": {
+    "@gqlapp/$-module$-common": "1.0.0"
+  }
 }
