generate select query based on graphql info

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -91,6 +91,7 @@
     "graphql": "^14.1.1",
     "graphql-auth": "0.2.6",
     "graphql-iso-date": "^3.5.0",
+    "graphql-parse-fields": "^1.2.0",
     "graphql-resolve-batch": "^1.0.2",
     "graphql-subscriptions": "^1.1.0",
     "graphql-tag": "^2.6.0",
@@ -101,6 +102,7 @@
     "isomorphic-fetch": "^2.2.1",
     "jsonwebtoken": "^8.1.0",
     "knex": "^0.14.2",
+    "knexnest": "^1.0.0",
     "lerna": "^2.5.1",
     "lint-staged": "^7.0.4",
     "lodash": "^4.17.4",
