Force jest to run server tests in one thread

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -11,8 +11,8 @@
     "clean": "rimraf build .tmp",
     "start": "node --harmony build",
     "test": "yarn tests && yarn lint",
-    "tests": "cross-env PORT=7070 jest --forceExit",
-    "tests:watch": "cross-env PORT=7070 jest --watch",
+    "tests": "cross-env PORT=7070 jest --runInBand --forceExit",
+    "tests:watch": "cross-env PORT=7070 jest --runInBand --watch",
     "eslint": "eslint --fix --ext js --ext jsx --ext json src",
     "tslint": "tslint --fix -p ../../tsconfig.json -c ../../tslint.json",
     "lint": "yarn eslint && yarn tslint",
