Use metro-minify-terser for mobile bundle minification

--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -50,7 +50,7 @@
     "apollo-logger": "^0.3.3",
     "apollo-upload-client": "^10.0.0",
     "expo": "^34.0.3",
-    "expo-cli": "^3.0.9",
+    "expo-cli": "~2.11.0",
     "expo-constants": "^6.0.0",
     "expo-file-system": "^6.0.2",
     "expo-font": "^6.0.1",
@@ -66,6 +66,7 @@
     "immutability-helper": "^2.6.2",
     "jest-expo": "^34.0.0",
     "lodash": "^4.17.4",
+    "metro-minify-terser": "^0.56.0",
     "minilog": "^3.1.0",
     "native-base": "^2.3.5",
     "prop-types": "^15.6.0",
