--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -68,7 +68,7 @@
     "lodash": "^4.17.4",
     "metro-minify-terser": "^0.56.0",
     "minilog": "^3.1.0",
-    "native-base": "~2.12.0",
+    "native-base": "^2.13.5",
     "prop-types": "^15.6.0",
     "react": "16.8.3",
     "react-apollo": "^3.0.0",
@@ -83,6 +83,7 @@
     "react-native-modal": "^5.4.0",
     "react-native-reanimated": "~1.1.0",
     "react-native-simple-picker": "^3.1.1",
+    "react-native-swipe-list-view": "^2.0.0",
     "react-navigation": "^3.11.1",
     "react-redux": "^7.1.0",
     "redux": "^4.0.1",
