Use React Hooks for counter feature module (#1135)

--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -37,6 +37,7 @@
   "author": "SysGears INC",
   "license": "MIT",
   "dependencies": {
+    "@apollo/react-hooks": "^3.0.0",
     "@fortawesome/fontawesome-free": "^5.8.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.17",
     "@fortawesome/free-brands-svg-icons": "^5.8.1",
@@ -66,7 +67,7 @@
     "apollo-upload-client": "^10.0.0",
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.3.1",
-    "connected-react-router": "^5.0.0",
+    "connected-react-router": "^6.5.2",
     "error-stack-parser": "^2.0.1",
     "extract-files": "^5.0.0",
     "filesize": "^3.5.11",
@@ -91,7 +92,7 @@
     "react-ga": "^2.3.5",
     "react-helmet": "^5.2.1",
     "react-i18next": "^7.6.0",
-    "react-redux": "^5.0.0",
+    "react-redux": "^7.1.0",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "react-stripe-elements": "^1.2.1",
@@ -117,7 +118,7 @@
     "@types/react-dom": "^16.8.0",
     "@types/react-helmet": "^5.0.6",
     "@types/react-native": "^0.55.7",
-    "@types/react-redux": "^5.0.0",
+    "@types/react-redux": "^7.1.2",
     "@types/react-router-dom": "^4.3.4",
     "@types/react-stripe-elements": "^1.1.7",
     "@types/storybook__react": "^4.0.0",
